# misakaAssetGene

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  prompt  pyproject.toml  spec.md  uno.config.ts
.claude/agents/: ai-ml.md  architect.md  backend.md  devops.md  frontend.md  qa-sdet.md  security.md  ui-ux.md
.claude/commands/: review-plan.md  spec-discuss.md  update-spec.md
.claude/rules/: community-workflow.md  frontend-standards.md  multimodal-assets.md  repo-hygiene.md  spec-workflow.md
.plan/: DEVELOPMENT_PLAN.md  RESEARCH_LOG.md
core/: __init__.py  config.py  main.py
core/consultant/: checklists.py  cold_start.py  engine.py  few_shot.py  planner.py
core/editor/: __init__.py  audio.py  image.py  metadata.py  video.py
core/generation/: __init__.py  composition.py  orchestrator.py  service.py
core/integration/: __init__.py  model_registry.py  tools.py  workers.py
core/llm/: __init__.py  local_manager.py  router.py  service.py
core/memory/: __init__.py  ingest.py  retrieve.py  store.py
core/models/: registry.json  schemas.py
core/network/: service.py  state.py
core/project/: __init__.py  cross_project.py  export.py  manager.py  portability.py  project.schema.json  (+2 more)
frontend/: index.html  tsconfig.json  vite.config.ts
scripts/: dev_stack.py  doctor.py  ensure_desktop_toolchain.py  ensure_local_llm.py  manager.ps1  manager.sh  setup.ps1  setup.sh  start-dev.ps1  start-dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
tools/: manifest.json
workers/: .gitignore  manifest.json
(+58 files in other folders)
